@@ -1,3 +1,8 @@
+2006-12-30  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_pattern.c: Cairo::GradientPattern#[]
+	-> Cairo::GradientPattern#get_color_stop.
+
 2006-12-29  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_context.c: keep reference of Ruby
